# tsgo-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsgo_origin.lock.toml  tsgo_ref.lock.toml  vite.config.ts
crates/corsa/: Cargo.toml
crates/corsa/src/: lib.rs
crates/corsa/tests/: api_async.rs  lsp_stdio.rs  orchestrator.rs  policy.rs  real_tsgo_baseline.rs  real_tsgo_regression.rs  real_tsgo_typecheck.rs
crates/corsa/tests/support/: mod.rs
crates/corsa_bind_client/: Cargo.toml
crates/corsa_bind_client/src/: lib.rs
crates/corsa_bind_client/src/api/: callbacks.rs  callbacks_tests.rs  changes.rs  client.rs  config.rs  document.rs  driver.rs  encoded.rs  handles.rs  mod.rs  msgpack_codec.rs  msgpack_worker.rs  requests_core.rs  responses.rs  snapshot.rs  spawn_stdio.rs
crates/corsa_bind_jsonrpc/: Cargo.toml
crates/corsa_bind_jsonrpc/src/: lib.rs
crates/corsa_bind_jsonrpc/src/jsonrpc/: connection.rs  connection_tests.rs  frame.rs  id.rs  message.rs
crates/corsa_bind_lsp/: Cargo.toml
crates/corsa_bind_lsp/src/: lib.rs
crates/corsa_bind_lsp/src/lsp/: client.rs  custom.rs  overlay.rs  virtual_document.rs  virtual_document_tests.rs
crates/corsa_bind_orchestrator/: Cargo.toml
crates/corsa_bind_orchestrator/src/: lib.rs
crates/corsa_bind_orchestrator/src/orchestrator/: api.rs  distributed.rs  mod.rs  raft.rs  state.rs
crates/corsa_bind_rs/: Cargo.toml
crates/corsa_bind_rs/src/: lib.rs
crates/corsa_bind_rs/tests/: api_async.rs  api_msgpack.rs  lsp_stdio.rs  orchestrator.rs  policy.rs  real_tsgo_baseline.rs  real_tsgo_regression.rs  real_tsgo_typecheck.rs
crates/corsa_bind_rs/tests/data/: real_tsgo_api_baseline.json
crates/corsa_bind_rs/tests/support/: mod.rs
crates/corsa_bind_runtime/: Cargo.toml
crates/corsa_bind_runtime/src/: broadcast.rs  executor.rs  lib.rs  task.rs
crates/corsa_orchestrator/: Cargo.toml
crates/corsa_orchestrator/src/: lib.rs
crates/corsa_orchestrator/src/orchestrator/: api.rs  distributed.rs  raft.rs  state_tests.rs
crates/corsa_ref/: Cargo.toml
crates/corsa_ref/src/: git.rs  lockfile.rs  manager.rs  status.rs
crates/tsgo_rs/: Cargo.toml
crates/tsgo_rs/examples/: distributed_orchestrator.rs  filesystem_callbacks.rs  lsp_overlay.rs  minimal_start.rs  mock_client.rs  observer_events.rs  orchestrator_cache.rs  real_snapshot.rs  virtual_document.rs
crates/tsgo_rs/examples/support/: mod.rs
crates/tsgo_rs/src/: lib.rs
crates/tsgo_rs/tests/: api_async.rs  api_msgpack.rs  orchestrator.rs  real_tsgo_baseline.rs
crates/tsgo_rs/tests/data/: real_tsgo_api_baseline.json
crates/tsgo_rs/tests/support/: mod.rs
crates/tsgo_rs_client/: Cargo.toml
crates/tsgo_rs_client/src/: lib.rs
crates/tsgo_rs_client/src/api/: callbacks.rs  callbacks_tests.rs  changes.rs  client.rs  config.rs  document.rs  driver.rs  encoded.rs  handles.rs  handles_tests.rs  methods_relations.rs  methods_symbols.rs  methods_types.rs  mod.rs  msgpack_worker.rs  requests_symbols.rs  requests_types.rs  responses.rs  snapshot.rs  spawn_stdio.rs
crates/tsgo_rs_core/: Cargo.toml
crates/tsgo_rs_core/src/: error.rs  fast.rs  lib.rs  process.rs
crates/tsgo_rs_jsonrpc/: Cargo.toml
crates/tsgo_rs_jsonrpc/src/: lib.rs
crates/tsgo_rs_jsonrpc/src/jsonrpc/: connection.rs  connection_tests.rs  frame.rs  frame_tests.rs  id.rs  message.rs  mod.rs
crates/tsgo_rs_lsp/: Cargo.toml
crates/tsgo_rs_lsp/src/: lib.rs
crates/tsgo_rs_lsp/src/lsp/: client.rs  custom.rs  mod.rs  overlay.rs  virtual_document.rs  virtual_document_tests.rs
crates/tsgo_rs_orchestrator/: Cargo.toml
crates/tsgo_rs_orchestrator/src/: lib.rs
crates/tsgo_rs_orchestrator/src/orchestrator/: api.rs  distributed.rs  mod.rs  raft.rs  raft_core.rs  state.rs
crates/tsgo_rs_ref/: Cargo.toml
crates/tsgo_rs_ref/src/: git.rs  lib.rs  lockfile.rs  main.rs  manager.rs  status.rs
crates/tsgo_rs_runtime/: Cargo.toml
crates/tsgo_rs_runtime/src/: broadcast.rs  executor.rs  lib.rs  task.rs
npm/corsa_bind_node/: Cargo.toml  README.md  index.d.ts  package.json
npm/corsa_bind_node/src/: api_client.rs  document.rs  lib.rs  orchestrator.rs  rule_predicates.rs  util.rs
npm/corsa_bind_node/ts/: index.test.ts  index.ts  types.ts
npm/tsgo_rs_node/: Cargo.toml  README.md  index.d.ts  package.json
npm/tsgo_rs_node/src/: api_client.rs  lib.rs  util.rs
npm/tsgo_rs_node/ts/: index.test.ts  index.ts  types.ts
src/bindings/c/corsa_bind_c/: Cargo.toml
src/bindings/c/corsa_bind_c/include/: corsa_bind.h
src/bindings/c/corsa_bind_c/src/: lib.rs
src/bindings/c/corsa_ffi/: Cargo.toml
src/bindings/c/corsa_ffi/include/: corsa_utils.h
src/bindings/c/corsa_ffi/src/: api_client.rs  lib.rs  tests.rs
src/bindings/nodejs/corsa_node/: Cargo.toml  README.md  index.d.ts  package.json  tsconfig.json
src/bindings/nodejs/corsa_node/src/: api_client.rs  document.rs  lib.rs  native_lint.rs  orchestrator.rs  rule_predicates.rs  util.rs  utils.rs
src/bindings/nodejs/corsa_node/ts/: index.test.ts  index.ts  types.ts
src/core/corsa_client/: Cargo.toml
src/core/corsa_client/src/: lib.rs
src/core/corsa_client/src/api/: callbacks.rs  changes.rs  client.rs  config.rs  document.rs  driver.rs  encoded.rs  handles.rs  methods_types.rs  mod.rs  msgpack_codec.rs  msgpack_codec_tests.rs  msgpack_worker.rs  profiling.rs  requests_core.rs  snapshot.rs  spawn_stdio.rs
src/core/corsa_core/: Cargo.toml
src/core/corsa_core/src/: fast.rs  lib.rs  observability.rs  process.rs  rpc.rs
src/core/corsa_core/src/lint/: context.rs  helpers.rs  mod.rs  registry.rs  tests.rs  types.rs
src/core/corsa_jsonrpc/: Cargo.toml
src/core/corsa_jsonrpc/src/: lib.rs
src/core/corsa_lsp/: Cargo.toml
src/core/corsa_lsp/src/: lib.rs
src/core/corsa_orchestrator/: Cargo.toml
src/core/corsa_orchestrator/src/: lib.rs
src/core/corsa_ref/: Cargo.toml
src/core/corsa_ref/src/: git.rs  lockfile.rs  main.rs  manager.rs  status.rs
src/core/corsa_runtime/: Cargo.toml
src/core/corsa_runtime/src/: broadcast.rs  executor.rs  lib.rs  task.rs
(+350 files in other folders)
