[workspace]
members = [
  "src/bindings/c/corsa_bind_c",
  "src/core/corsa_bind_core",
  "src/core/corsa_bind_jsonrpc",
  "src/core/corsa_bind_client",
  "src/core/corsa_bind_lsp",
  "src/core/corsa_bind_orchestrator",
  "src/core/corsa_bind_runtime",
  "src/core/corsa_bind_ref",
  "src/bindings/rust/corsa_bind_rs",
  "src/bindings/nodejs/corsa_bind_node",
]
resolver = "2"

[workspace.package]
documentation = "https://github.com/ubugeeei/corsa-bind/tree/main/docs"
homepage = "https://github.com/ubugeeei/corsa-bind"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ubugeeei/corsa-bind"
rust-version = "1.85"

[workspace.dependencies]
bumpalo = { version = "3", features = ["collections"] }
compact_str = { version = "0.8", features = ["serde"] }
log = "0.4"
memchr = "2"
phf = { version = "0.11", features = ["macros"] }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
