[package]
name = "corsa_bind_client"
version = "0.1.0"
edition = "2024"
description = "Typed stdio API client bindings for typescript-go"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_bind_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
log = { workspace = true }
parking_lot = "0.12"
phf = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
corsa_bind_core = { version = "0.1.0", path = "../corsa_bind_core" }
corsa_bind_jsonrpc = { version = "0.1.0", path = "../corsa_bind_jsonrpc" }
corsa_bind_runtime = { version = "0.1.0", path = "../corsa_bind_runtime" }
