[package]
name = "corsa_bind_jsonrpc"
version = "0.1.0"
edition = "2024"
description = "JSON-RPC framing and thread-backed transport helpers for corsa-bind"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_bind_jsonrpc"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
corsa_bind_core = { version = "0.1.0", path = "../corsa_bind_core" }
corsa_bind_runtime = { version = "0.1.0", path = "../corsa_bind_runtime" }
