[package]
name = "tsgo_rs_orchestrator"
version = "0.1.0"
edition = "2024"
description = "Worker pooling, caching, and experimental replicated orchestration for tsgo-rs"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_orchestrator"
path = "src/lib.rs"

[features]
default = []
experimental-distributed = []

[dependencies]
log = { workspace = true }
lsp-types = "0.97"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsgo_rs_client = { version = "0.1.0", path = "../tsgo_rs_client" }
tsgo_rs_core = { version = "0.1.0", path = "../tsgo_rs_core" }
tsgo_rs_lsp = { version = "0.1.0", path = "../tsgo_rs_lsp" }
tsgo_rs_runtime = { version = "0.1.0", path = "../tsgo_rs_runtime" }
