[package]
name = "tsgo_rs_ref"
version = "0.1.0"
edition = "2024"
description = "Pinned upstream ref management and verification tooling for tsgo-rs"
publish = false
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_ref"
path = "src/lib.rs"

[[bin]]
name = "tsgo_ref"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tsgo_rs_core = { version = "0.1.0", path = "../tsgo_rs_core" }

[dev-dependencies]
tempfile = "3"
