[package]
name = "tsgo-rs-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "tsgo_rs_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
parking_lot = "0.12"
phf = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsgo-rs-core = { path = "../tsgo_rs_core" }
tsgo-rs-jsonrpc = { path = "../tsgo_rs_jsonrpc" }
tsgo-rs-runtime = { path = "../tsgo_rs_runtime" }
