[package]
name = "tsgo_rs_client"
version = "0.1.0"
edition = "2024"
description = "Typed stdio API client bindings for typescript-go"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
log = { workspace = true }
parking_lot = "0.12"
phf = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsgo_rs_core = { version = "0.1.0", path = "../tsgo_rs_core" }
tsgo_rs_jsonrpc = { version = "0.1.0", path = "../tsgo_rs_jsonrpc" }
tsgo_rs_runtime = { version = "0.1.0", path = "../tsgo_rs_runtime" }
