[package]
name = "tsgo-rs-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "tsgo_rs_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
bumpalo = { workspace = true }
compact_str = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { workspace = true }
thiserror = "2"
