[package]
name = "tsgo-rs-jsonrpc"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "tsgo_rs_jsonrpc"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsgo-rs-core = { path = "../tsgo_rs_core" }
tsgo-rs-runtime = { path = "../tsgo_rs_runtime" }
