[package]
name = "tsgo-rs-jsonrpc"
version = "0.1.0"
edition = "2024"
description = "JSON-RPC framing and thread-backed transport helpers for tsgo-rs"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_jsonrpc"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsgo-rs-core = { version = "0.1.0", path = "../tsgo_rs_core" }
tsgo-rs-runtime = { version = "0.1.0", path = "../tsgo_rs_runtime" }
