[package]
name = "tsgo-rs-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP-focused clients, overlays, and virtual documents for typescript-go"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_lsp"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
lsp-types = "0.97"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tsgo-rs-core = { version = "0.1.0", path = "../tsgo_rs_core" }
tsgo-rs-jsonrpc = { version = "0.1.0", path = "../tsgo_rs_jsonrpc" }
tsgo-rs-runtime = { version = "0.1.0", path = "../tsgo_rs_runtime" }
