[package]
name = "tsgo_rs_lsp"
version = "0.1.0"
edition = "2024"
description = "LSP-focused clients, overlays, and virtual documents for typescript-go"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tsgo_rs_lsp"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
lsp-types = "0.97"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tsgo_rs_core = { version = "0.1.0", path = "../tsgo_rs_core" }
tsgo_rs_jsonrpc = { version = "0.1.0", path = "../tsgo_rs_jsonrpc" }
tsgo_rs_runtime = { version = "0.1.0", path = "../tsgo_rs_runtime" }
