[package]
name = "corsa_bind_node"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
experimental-distributed = ["corsa_bind_rs/experimental-distributed"]

[dependencies]
lsp-types = "0.97"
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
corsa_bind_rs = { version = "0.1.0", path = "../../crates/corsa_bind_rs", features = [
  "experimental-distributed",
] }

[build-dependencies]
napi-build = "2"
