[package]
name = "corsa_core"
version = "0.1.0"
edition = "2024"
description = "Shared errors, process lifecycle helpers, and fast-path primitives for corsa"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
bumpalo = { workspace = true }
compact_str = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { workspace = true }
thiserror = "2"
