[package]
name = "corsa_orchestrator"
version = "0.1.0"
edition = "2024"
description = "Worker pooling, caching, and experimental replicated orchestration for corsa"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_orchestrator"
path = "src/lib.rs"

[features]
default = []
experimental-distributed = []

[dependencies]
log = { workspace = true }
lsp-types = "0.97"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
corsa_client = { version = "0.1.0", path = "../corsa_client" }
corsa_core = { version = "0.1.0", path = "../corsa_core" }
corsa_lsp = { version = "0.1.0", path = "../corsa_lsp" }
corsa_runtime = { version = "0.1.0", path = "../corsa_runtime" }
