[package]
name = "corsa_ref"
version = "0.5.0"
edition = "2024"
description = "Pinned upstream ref management and verification tooling for corsa"
publish = false
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_ref"
path = "src/lib.rs"

[[bin]]
name = "tsgo_ref"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
corsa_core = { version = "0.5.0", path = "../corsa_core" }

[dev-dependencies]
tempfile = "3"
