[package]
name = "corsa_runtime"
version = "0.1.0"
edition = "2024"
description = "Small executor, task primitives, and broadcast channels for corsa"
publish = ["crates-io"]
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "corsa_runtime"
path = "src/lib.rs"

[dependencies]
smallvec = { workspace = true }
