[package]
name = "corsa_bind_c"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
corsa_bind_rs = { version = "0.1.0", path = "../../rust/corsa_bind_rs", features = [
  "experimental-distributed",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
