[package]
name = "corsa_node"
version = "0.7.0"
edition = "2024"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
experimental-distributed = ["corsa/experimental-distributed"]

[dependencies]
lsp-types = "0.97"
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
corsa = { version = "0.7.0", path = "../../rust/corsa", features = ["experimental-distributed"] }

[build-dependencies]
napi-build = "2"
